web-535 alignment bug fixed

--- a/src/app/pages/install/install.component.scss
+++ b/src/app/pages/install/install.component.scss
@@ -1,10 +1,7 @@
 .h100 {
-    height: calc(100vh - 180px);
+    height: 100vh;
     align-items: center;
     overflow-y: scroll;
-    @media (max-width: 1200px) {
-        height: calc(100vh - 80px);
-    }
 }
 
 .h100::-webkit-scrollbar {
